# server

./: .gitignore  README.md  docker-compose.yml  sync.docx  sync.html  sync.qmd
.github/workflows/: docker-shiny.yml
caddy/: Caddyfile
diagrams/: README.md  architecture-detailed.mmd  architecture-simple.mmd  prod-stack.mmd  render.sh  sync-detailed.mmd  sync-simple.mmd
h3t/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
h3t/app/: config.py  db.py  h3t_query.py  main.py  prune.py  sql_validate.py  tiles.py
h3t/scripts/: generate_r_golden.R  parity_check.py
h3t/tests/: conftest.py  test_config.py  test_endpoints.py  test_h3t_query.py  test_sql_validate.py  test_tiles.py
h3t/tests/fixtures/: r_golden.json
plumber/: Dockerfile
postgis/: Dockerfile  init.sh
postgis/init-scripts/: add-user-anon-to-db.sh
prod/: Caddyfile  docker-compose.yml  monitor-heartbeat.sh  ping.sh  sync-pull.sh  sync-push.sh  update-images.sh  watchtower.yml
prod/caddy/: Dockerfile
prod/shiny/: Dockerfile
rstudio/: Dockerfile
titiler/: Dockerfile  app.py  factory.py  requirements.txt
titiler/scripts/: make_cellid_cog.py  make_cellid_cog.sh
varnish/: h3t.vcl  titiler.vcl
